--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,64 @@
 <head>
 	<title>Test Page</title>
 </head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../public/css/INSERTYOURCSSFILEHERE.css">
 <body>
-Begin here (or replace this with any static code already written).
+
+   <div>
+      Here are some links.
+   </div>
+ 	<h4>links</h4>
+  <div id="results">
+      <a href="results.html">
+        <!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+        <p>results</p>
+      </a>
+    </div>
+    <div id="search">
+      <a href="search.html">
+        <!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+        <p>search</p>
+      </a>
+    </div>
+    <div id="page2">
+      <a href="page2.html">
+        <!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+        <p>page2</p>
+      </a>
+    </div>
+    <div id="page3">
+      <a href="page3.html">
+        <!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+        <p>page3</p>
+      </a>
+    </div>
+    <div id="page4">
+      <a href="page4.html">
+        <!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+        <p>page4</p>
+      </a>
+    </div>
+    <div id="page5">
+      <a href="page5.html">
+        <!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+        <p>page5</p>
+      </a>
+    </div>
+    <div id="page6">
+      <a href="page6.html">
+        <!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+        <p>page6</p>
+      </a>
+    </div>
+
+<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/introHCI.js"></script>
+	<script id="handlebars-demo" type="text/x-handlebars-template">
+</script>
 </body>
 </html>
