fixed some things

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,14 +22,14 @@
 				<h4>Home</h4>
 			</div>
 			<div class="col">
-				<a href="help.html"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
+				<a href="help"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
 			</div>
 		</div>
 	</div>
 	<div class="container">
       	<!-- <h1>WePet uwu ™ <3</h1> -->
 		<div id="index">
-		<a href="index.html">
+		<a href="index">
 		 	<img src="images/logo.png" alt="WePet logo" class="pic-center">
 		 </a>
 		<!--This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
@@ -39,48 +39,48 @@
 		<p class="p6">Quick Links:</p>
 		</div>
 		<div id="search">
-		<a href="search.html">
-		<p class="p3">search</p>
+		    <a href="search">
+		    <p class="p3">search</p>
 		</a>
 		</div>
 		<div id="results">
-		<a href="results.html">
+		    <a href="results">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
 			<p class="p3">results</p>
-		</a>
+		    </a>
 		</div>
 		<div id="messages">
-		<a href="messages.html">
+		<a href="messages">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
 			<p class="p3">messages</p>
 		</a>
 		</div>
 		<div id="newEvent">
-		<a href="newEvent.html">
+		<a href="newEvent">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
 			<p class="p3">newEvent</p>
 		</a>
 		</div>
 		<div id="profile">
-		<a href="profile.html">
+		<a href="profile">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
 			<p class="p3">profile</p>
 		</a>
 		</div>
 		<div id="kellyParty">
-		<a href="kellyParty.html">
+		<a href="kellyParty">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
 			<p class="p3">Kelly's Puppy Party</p>
 		</a>
 		</div>
 		<div id="help">
-		<a href="help.html">
+		<a href="help">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
 			<p class="p3">help</p>
 		</a>
 		</div>
 		<div id="blankEvent">
-		<a href="blankEvent.html">
+		<a href="blankEvent">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
 			<p class="p3">blank event</p>
 		</a>
@@ -90,31 +90,31 @@
 	<!-- bottom nav -->
 	<div class="mynavbar">
 		<!--home-->
-		<a class="navbar-brand" href="index.html">
+		<a class="navbar-brand" href="index">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bottomIcons bi bi-house-door-fill" viewBox="0 0 16 16">
 				<path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"/>
 			</svg>
 		</a>
 		<!--search-->
-		<a class="navbar-brand" href="search.html">
+		<a class="navbar-brand" href="search">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bottomIcons bi bi-search" viewBox="0 0 16 16">
 				<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
 			</svg>
 		</a>
 		<!--new event-->
-		<a class="navbar-brand" href="newEvent.html">
+		<a class="navbar-brand" href="newEvent">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bottomIcons bi bi-calendar-plus-fill" viewBox="0 0 16 16">
 				<path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zM8.5 8.5V10H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V11H6a.5.5 0 0 1 0-1h1.5V8.5a.5.5 0 0 1 1 0z"/>
 			</svg>
 		</a>
 		<!--messages-->
-		<a class="navbar-brand" href="messages.html">
+		<a class="navbar-brand" href="messages">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bottomIcons bi bi-chat-square-text-fill" viewBox="0 0 16 16">
 				<path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.5a1 1 0 0 0-.8.4l-1.9 2.533a1 1 0 0 1-1.6 0L5.3 12.4a1 1 0 0 0-.8-.4H2a2 2 0 0 1-2-2V2zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5z"/>
 			</svg>
 		</a>
 		<!--profile-->
-		<a class="navbar-brand" href="profile.html">
+		<a class="navbar-brand" href="profile">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bottomIcons bi bi-person-fill" viewBox="0 0 16 16">
 				<path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
 			</svg>
