--- a/public/css/index.css
+++ b/public/css/index.css
@@ -95,10 +95,12 @@ body {
 .sortFilter {
     margin-top: 60px;
     text-align:center;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
-.btn{
-    background-color:rgb(196, 196, 196);
+.btn, .selectpicker{
+    background-color:rgb(187, 187, 187);
     color: white;
 }
 
@@ -131,10 +133,7 @@ body {
     font-size: small;
 }
 .card-button {
-    margin-top: 10%;
-    margin-right: 1%;
-    margin-left: 1%;
-    width: 5%;
+    margin: auto;
 }
 
 /* images */
@@ -146,5 +145,10 @@ body {
 .NoResultsBottom {
     margin-bottom: 80px;
     text-align: center;
+}
+
+.card-text {
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 /* ==================== end ==================== */
