--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -31,103 +31,47 @@
 	</div>
 	<!-- filter: https://www.w3schools.com/howto/howto_js_filter_elements.asp -->
 	<div class="sortFilter">
-		<p id="sortBy">Sort by:</p>
-		<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			Filter</button>
-		<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <div class="form-group row">
+            <label for="time" class="col-sm-2 col-form-label">Sort by within:</label>
+            <div class="col-sm-10">
+                <select class="selectpicker dropdown-menu-right form-control" id="time" title="Select...">
+                    <option>All time</option> 
+                    <option>The next month</option>
+                    <option>The next week</option>
+                </select>
+            </div>
+        </div>
+		{{!-- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 			<!-- <a class="dropdown-item" href="#">Next Day</a> -->
 			<a class="dropdown-item" href="#">Next Week</a>
 			<a class="dropdown-item" href="#">Next Month</a>
 			<a class="dropdown-item" href="#">All Time</a>
-		</div>
+		</div> --}}
 	</div>
 	<!-- replace with JSON? -->
 	<div class="resultsCards">
-		<div class="card">
-			<div class="card-body">
-				<div class="row card-elements">
-					<div class="card-thumbnail">
-						<!-- <img src="../images/popcorn.jpg" id="popcorn"> -->
-					</div>
-					<div class="card-description">
-						<h5 class="card-title">Kelly's Puppy Party</h5>
-						<h6>[Dog: Maltese]</h6>
-						<p class="card-text">@Friday 2:10pm</p>	
-					</div>
-					<div class="card-button">
-						<a href="kellyParty" class="btn">Go!</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="card">
-			<div class="card-body">
-				<div class="row card-elements">
-					<div class="card-thumbnail">
-						<!-- <img src="../images/" id=""> -->
-					</div>
-					<div class="card-description">
-						<h5 class="card-title">Petco Adoption Event</h5>
-						<h6>[Mixed]</h6>
-						<p class="card-text">@Saturday 12:00pm</p>	
-					</div>
-					<div class="card-button">
-						<a href="blankEvent" class="btn">Go!</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="card">
-			<div class="card-body">
-				<div class="row card-elements">
-					<div class="card-thumbnail">
-						<!-- <img src="../images/" id=""> -->
-					</div>
-					<div class="card-description">
-						<h5 class="card-title">Sally's Cute Doggos!!</h5>
-						<h6>[Golden Retriever]</h6>
-						<p class="card-text">@Saturday 3:00pm</p>	
-					</div>
-					<div class="card-button">
-						<a href="blankEvent" class="btn">Go!</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="card">
-			<div class="card-body">
-				<div class="row card-elements">
-					<div class="card-thumbnail">
-						<!-- <img src="../images/" id=""> -->
-					</div>
-					<div class="card-description">
-						<h5 class="card-title">Ben's Bring a Pup Home</h5>
-						<h6>[Shiba Inu]</h6>
-						<p class="card-text">@2/27/21 11:00am</p>	
-					</div>
-					<div class="card-button">
-						<a href="blankEvent" class="btn">Go!</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="card">
-			<div class="card-body">
-				<div class="row card-elements">
-					<div class="card-thumbnail">
-						<!-- <img src="../images/" id=""> -->
-					</div>
-					<div class="card-description">
-						<h5 class="card-title">Chad's Adoption Party</h5>
-						<h6>[Poodle]</h6>
-						<p class="card-text">@3/1/21 2:00pm</p>	
-					</div>
-					<div class="card-button">
-						<a href="blankEvent" class="btn">Go!</a>
-					</div>
-				</div>
-			</div>
-		</div>
+        {{#each events}}
+            <div class="card">
+                <div class="card-body">
+                    <div class="row card-elements">
+                        <div class="card-thumbnail">
+                            <!-- public/images/popcorn.jpg -->
+                            <img src="{{image}}"> 
+                        </div>
+                        <div class="card-description">
+                            <h5 class="card-title">{{eventName}}</h5>
+                            <h6>[{{petType}}: {{breed}}]</h6>
+                            <p class="card-text">{{eventType}} Event</p>
+                            <p class="card-text">{{time}}</p>
+                            <p class="card-text">@{{location}}</p>	
+                        </div>
+                        <div class="card-button">
+                            <a href="kellyParty" class="btn btn-go">Go!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {{/each}}
 		<div class="NoResultsBottom">
 			<p>No more results</p>
 		</div>
@@ -166,6 +110,7 @@
 			</svg>
 		</a>
 	</div>
+        <script src="../routes/results.js"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
