--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -68,11 +68,11 @@
                 <label for="event" class="col-sm-2 col-form-label">Event</label>
                 <div class="col-sm-10">
                     <select class="selectpicker dropdown-menu-right form-control" multiple data-actions-box="true" id="event">
-                        <option>Adoptions</option> 
-                        <option>Meetups</option> 
-                        <option>Classes</option>
-                        <option>Fundraising</option>
-                        <option>Other</option>
+                        <option value="adoptions">Adoptions</option> 
+                        <option value="meetups">Meetups</option> 
+                        <option value="classes">Classes</option>
+                        <option value="fundraising">Fundraising</option>
+                        <option value="otherEvent">Other</option>
                     </select>
                 </div>
             </div>
@@ -82,11 +82,23 @@
                 <label for="petType" class="col-sm-2 col-form-label">Pet Type</label>
                 <div class="col-sm-10">
                     <select class="selectpicker dropdown-menu-right form-control" multiple data-actions-box="true" id="petType">
-                        <option>Dogs</option> 
-                        <option>Cats</option> 
-                        <option>Critters</option> 
-                        <option>Reptiles</option>
-                        <option>Other</option>
+                        <option value="dogs">Dogs</option> 
+                        <option value="cats">Cats</option> 
+                        <option value="critters">Critters</option>
+                        <option value="reptiles">Reptiles</option>
+                        <option value="otherPet">Other</option>
+                    </select>
+                </div>
+            </div>
+
+            <!--dog breeds-->
+            <div class="form-group row" id="dogBreedDiv">
+                <label for="dogBreed" class="col-sm-2 col-form-label">Breed</label>
+                <div class="col-sm-10">
+                    <select class="selectpicker dropdown-menu-right form-control" multiple data-actions-box="true" data-live-search="true" id="dogBreed" title="Pick a breed" data-size="5">
+                        {{#each dogs}}
+                        <option value="{{this}}">{{this}}</option>
+                        {{/each}}
                     </select>
                 </div>
             </div>
@@ -142,5 +154,8 @@
     <!--bootstrap-select-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+
+    <!--search js-->
+    <script src="js/search.js"></script>
   </body>
 </html>
