--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -81,7 +81,8 @@
             <div class="form-group row">
                 <label for="petType" class="col-sm-2 col-form-label">Pet Type</label>
                 <div class="col-sm-10">
-                    <select class="selectpicker dropdown-menu-right form-control" multiple data-actions-box="true" id="petType">
+                    <select class="selectpicker dropdown-menu-right form-control" id="petType">
+                        <option value="" hidden>None</option>
                         <option value="dogs">Dogs</option> 
                         <option value="cats">Cats</option> 
                         <option value="critters">Critters</option>
@@ -97,6 +98,18 @@
                 <div class="col-sm-10">
                     <select class="selectpicker dropdown-menu-right form-control" multiple data-actions-box="true" data-live-search="true" id="dogBreed" title="Pick a breed" data-size="5">
                         {{#each dogs}}
+                        <option value="{{this}}">{{this}}</option>
+                        {{/each}}
+                    </select>
+                </div>
+            </div>
+
+            <!--cat breeds-->
+            <div class="form-group row" id="catBreedDiv">
+                <label for="catBreed" class="col-sm-2 col-form-label">Breed</label>
+                <div class="col-sm-10">
+                    <select class="selectpicker dropdown-menu-right form-control" multiple data-actions-box="true" data-live-search="true" id="catBreed" title="Pick a breed" data-size="5">
+                        {{#each cats}}
                         <option value="{{this}}">{{this}}</option>
                         {{/each}}
                     </select>
