--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -66,7 +66,7 @@
                             <p class="card-text">@{{location}}</p>	
                         </div>
                         <div class="card-button">
-                            <a href="kellyParty" class="btn btn-go">Go!</a>
+                            <a href="blankEvent/{{eventName}}" class="btn btn-go">Go!</a>
                         </div>
                     </div>
                 </div>
