--- a/views/blankEvent.handlebars
+++ b/views/blankEvent.handlebars
@@ -27,13 +27,21 @@
     </div>
     <div class="container">
         <h2>{{eventName}}</h2>
-        <img src="{{image}}">
-        <p>{{eventType}}</p>
-        <p>{{petType}}: {{breed}}</p>
-        <p>{{time}}</p>
-        <p>{{location}}</p>
+        <div class="row">
+            <div class="column">
+                <div>
+                    <!-- public/images/popcorn.jpg -->
+                    <img class="eventImage" src="/images/{{image}}"> 
+                </div>
+            </div>
+            <div class="column">
+                <p>{{eventType}} Event</p>
+                <p>{{petType}}: {{breed}}</p>
+                <p>{{time}}</p>
+                <p>{{location}}</p>
+            </div>
+        </div>
         <p>{{description}}</p>
-
         {{#if attending}}
         <div class="form-check">
 		  <input class="form-check-input" type="checkbox" value="" id="attending" checked>
