temp removed image in results

--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -56,7 +56,7 @@
                     <div class="row card-elements">
                         <div class="card-thumbnail">
                             <!-- public/images/popcorn.jpg -->
-                            <img src="{{image}}"> 
+                            {{!-- <img src="{{image}}">  --}}
                         </div>
                         <div class="card-description">
                             <h5 class="card-title">{{eventName}}</h5>
