Added content to messaging page, profile, and help page

--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -27,7 +27,11 @@
 		</div>
 	</div>
    <div class="container">
-        <p>Help</p>
+        <p class="p4">Help page</p>
+   </div>
+   <br>
+   <div class="container">
+        <p class="p8">Welcome to WePet, to search for new results access the search page via the magnifying glass icon on the bottom. You may filter results and add events you wish to attend to your calendar. To check your messages or write a new message to a user, select the text icon on the bottom of the page. Messages are peer-to-peer encrypted to protect your privacy. </p>
    </div>
  	<!-- <h4>links</h4>
     <div id="project1">
