--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -40,8 +40,8 @@
                     <p class="p8 petName">Popcorn</p>
                 </div>
                 <div class="column petColumn">
-                    <img src="images/maya.jpg" alt="logo" title="Copper" style="width:70%">
-                    <p class="p8 petName">Copper</p>
+                    <img src="images/maya.jpg" alt="logo" title="Maya" style="width:70%">
+                    <p class="p8 petName">Maya</p>
                 </div>
             </div> 
         </div>
