--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -25,16 +25,24 @@
 			</div>
 		</div>
 	</div>
-   <div class="container">
-        <p>Profile</p>
-   </div>
  	<!-- <h4>links</h4>
     <div id="project1">
       <a href="index2.html">
          This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> 
         <p>Sustain-A-Thon</p>
       </a> -->
-    </div> 
+    <div class="container">
+   </div>
+    </div>
+    <div class="contentBorder" id="avatar">
+    <img src="images/Angela.jpg" alt="logo" class="pic-center">
+    <p class="p4">User122</p>
+  </div>
+  <div class="container">
+  		<p class="p6">Change Profile Picture</p>
+        <p class="p6">Change Privacy Settings</p>
+        <p class="p6">Change Password</p>
+   </div>
 
     <!-- bottom nav -->
 	<div class="mynavbar">
