--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -9,7 +9,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/messages.css">
 <body>
 <!-- top nav -->
     <div class="topBar fixed-top" >
@@ -25,16 +25,40 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <p>Messages</p>
-    </div>
- 	<!-- <h4>links</h4>
-    <div id="project1">
-      <a href="index2.html">
-         This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> 
-        <p>Sustain-A-Thon</p>
-      </a> -->
-    </div> 
+    <br>
+    <br>
+    <!-- message history -->
+     <div class="container">
+  		<img src="images/gigachad.jpg" alt="Avatar">
+  		<p>Hello. Are you coming to Kelly's Puppy Party?</p>
+  		<span class="time-right">11:00</span>
+		</div>
+
+		<div class="container darker">
+  		<img src="images/Angela.jpg" alt="Avatar" class="right">
+  		<p>Hey! Of course, see you there next week?</p>
+  		<span class="time-left">11:01</span>
+		</div>
+
+		<div class="container">
+  		<img src="images/gigachad.jpg" alt="Avatar">
+  		<p>Sweet! I am too. I can't wait for fido to meet new friends</p>
+  		<span class="time-right">11:02</span>
+		</div>
+
+		<div class="container darker">
+  		<img src="images/Angela.jpg" alt="Avatar" class="right">
+  		<p>I'm so glad I got this app.</p>
+  		<span class="time-left">11:05</span>
+		</div>
+
+		<form>
+            <!--type a message-->
+            <div class="form-group">
+                <label class="sr-only" for="typeMessage">typeMessage</label>
+                    <input type="text" class="form-control" placeholder="type a message">
+            </div>
+          </form> 
 
     <!-- bottom nav -->
 	<div class="mynavbar">
