--- a/views/newEvent.handlebars
+++ b/views/newEvent.handlebars
@@ -9,7 +9,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/newEvent.css">
 </head>
 <body>
     <!-- top nav -->
@@ -27,7 +27,7 @@
 		</div>
 	</div>
    <div class="container">
-        <p>Create New Event</p>
+        <p class="p8">Give event details</p>
    </div>
  	<!-- <h4>links</h4>
     <div id="project1">
@@ -35,7 +35,19 @@
          This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> 
         <p>Sustain-A-Thon</p>
       </a> -->
-    </div> 
+  </div>
+  <form id="json">
+  <input type="file" class="form-control" placeholder="image upload" name="image" />
+  <input type="text" class="form-control" placeholder="Event name" name="eventName" />
+  <input type="text" class="form-control" placeholder="event type" name="eventType" />
+  <input type="text" class="form-control" placeholder="pet type" name="petType" />
+  <input type="text" class="form-control" placeholder="breed" name="breed" />
+  <input type="time" class="form-control" placeholder="time" name="time" />
+  <input type="text" class="form-control" placeholder="location" name="location" />
+  <input type="text" class="form-control" placeholder="attending?" name="attending" />
+  <input type="text" class="form-control" placeholder="description" name="description" />
+	</form>
+	<button id="getDataBtn">Create new event</button> 
 
     <!-- bottom nav -->
 	<div class="mynavbar">
@@ -73,7 +85,7 @@
 
 <script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/introHCI.js"></script>
+	<script src="js/newEvent.js"></script>
 	<script id="handlebars-demo" type="text/x-handlebars-template">
 </script>
 </body>
