--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -29,25 +29,25 @@
     <br>
     <!-- message history -->
      <div class="container">
-  		<img src="images/gigachad.jpg" alt="Avatar">
+  		<img src="images/Angela.jpg" alt="Avatar">
   		<p>Hello. Are you coming to Kelly's Puppy Party?</p>
   		<span class="time-right">11:00</span>
 		</div>
 
 		<div class="container darker">
-  		<img src="images/Angela.jpg" alt="Avatar" class="right">
+  		<img src="images/gigachad.jpg" alt="Avatar" class="right">
   		<p>Hey! Of course, see you there next week?</p>
   		<span class="time-left">11:01</span>
 		</div>
 
 		<div class="container">
-  		<img src="images/gigachad.jpg" alt="Avatar">
+  		<img src="images/Angela.jpg" alt="Avatar">
   		<p>Sweet! I am too. I can't wait for fido to meet new friends</p>
   		<span class="time-right">11:02</span>
 		</div>
 
 		<div class="container darker">
-  		<img src="images/Angela.jpg" alt="Avatar" class="right">
+  		<img src="images/gigachad.jpg" alt="Avatar" class="right">
   		<p>I'm so glad I got this app.</p>
   		<span class="time-left">11:05</span>
 		</div>
