--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -35,7 +35,7 @@
    </div>
     </div>
     <div class="contentBorder" id="avatar">
-    <img src="images/Angela.jpg" alt="logo" class="pic-center">
+    <img src="images/gigachad.jpg" alt="logo" class="pic-center">
     <p class="p4">User122</p>
   </div>
   <div class="container">
