edited messages and profile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -139,6 +139,11 @@ body {
     height: auto;
 }
 
+#avatar {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
 /* Resutls and Search pages */
 .sortFilter {
     margin-top: 60px;
