--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -25,28 +25,27 @@
             </div>
         </div>
     </div>
-    <br>
-    <br>
     <!-- message history -->
-     <div class="container">
+
+     	<div class="msgcontainer" id="topMessage">
   		<img src="images/Angela.jpg" alt="Avatar">
   		<p>Hello. Are you coming to Kelly's Puppy Party?</p>
   		<span class="time-right">11:00</span>
 		</div>
 
-		<div class="container darker">
+		<div class="msgcontainer darker">
   		<img src="images/gigachad.jpg" alt="Avatar" class="right">
   		<p>Hey! Of course, see you there next week?</p>
   		<span class="time-left">11:01</span>
 		</div>
 
-		<div class="container">
+		<div class="msgcontainer">
   		<img src="images/Angela.jpg" alt="Avatar">
   		<p>Sweet! I am too. I can't wait for fido to meet new friends</p>
   		<span class="time-right">11:02</span>
 		</div>
 
-		<div class="container darker">
+		<div class="msgcontainer darker">
   		<img src="images/gigachad.jpg" alt="Avatar" class="right">
   		<p>I'm so glad I got this app.</p>
   		<span class="time-left">11:05</span>
