--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -30,14 +30,14 @@
 		</div>
 	</div>
 	<!-- filter: https://www.w3schools.com/howto/howto_js_filter_elements.asp -->
-	<div class="sortFilter">
+	<div class="sortFilter" id="myBtnContainer">
         <div class="form-group row">
             <label for="time" class="col-sm-2 col-form-label">Sort by within:</label>
             <div class="col-sm-10">
                 <select class="selectpicker dropdown-menu-right form-control" id="time" title="Select...">
-                    <option>All time</option> 
-                    <option>The next month</option>
-                    <option>The next week</option>
+                    <option class="btn active" onclick="filterSelection('all')">All time</option> 
+                    <option class="btn" onclick="filterSelection('nextWeek')">The next month</option>
+                    <option class="btn" onclick="filterSelection('nextMonth')">The next week</option>
                 </select>
             </div>
         </div>
@@ -51,7 +51,7 @@
 	<!-- replace with JSON? -->
 	<div class="resultsCards">
         {{#each events}}
-            <div class="card">
+            <div class="card filterDiv {{sortBy}}">
                 <div class="card-body">
                     <div class="row card-elements">
                         <div class="card-thumbnail">
@@ -110,8 +110,8 @@
 			</svg>
 		</a>
 	</div>
-        <script src="../routes/results.js"></script>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="/routes/filterTime.js"></script>
+	    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
