index bottom margin

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -129,6 +129,7 @@ body {
     margin-left: 7%;
     margin-right: 7%;
     margin-top: 70px;
+    margin-bottom: 80px;
     text-align: center;
 }
 
