--- a/views/blankEvent.handlebars
+++ b/views/blankEvent.handlebars
@@ -49,6 +49,9 @@
 		    <p id="attendingText">I'm attending</p>
 		  </label>
 		</div>
+        <div class="alert alert-primary" role="alert">
+            This event is saved! View your <a href="../index" class="alert-link">saved events</a>.
+        </div>
 		
     </div>
  	<!-- <h4>links</h4>
