--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -73,7 +73,7 @@
 	            </div>
 	        {{/if}}
             {{/each}}
-            <a role="button" class="btn" href="search">Search for events?</a>
+            <a role="button" class="btn" id="searchEventBtn" href="search">Search for events?</a>
 		</div>
 		<!-- replace with JSON? -->
         <!-- <div class="resultsCards">
