--- a/views/newEvent.handlebars
+++ b/views/newEvent.handlebars
@@ -29,25 +29,20 @@
    <div class="container">
         <p class="p8">Give event details</p>
    </div>
- 	<!-- <h4>links</h4>
-    <div id="project1">
-      <a href="index2.html">
-         This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> 
-        <p>Sustain-A-Thon</p>
-      </a> -->
-  </div>
-  <form id="json">
-  <input type="file" class="form-control" placeholder="image upload" name="image" />
-  <input type="text" class="form-control" placeholder="Event name" name="eventName" />
-  <input type="text" class="form-control" placeholder="event type" name="eventType" />
-  <input type="text" class="form-control" placeholder="pet type" name="petType" />
-  <input type="text" class="form-control" placeholder="breed" name="breed" />
-  <input type="time" class="form-control" placeholder="time" name="time" />
-  <input type="text" class="form-control" placeholder="location" name="location" />
-  <input type="text" class="form-control" placeholder="attending?" name="attending" />
-  <input type="text" class="form-control" placeholder="description" name="description" />
-	</form>
-	<button id="getDataBtn">Create new event</button> 
+   <div class="containerEvent">
+        <form id="json">
+        <input type="file" class="form-control" placeholder="image upload" name="image" />
+        <input type="text" class="form-control" placeholder="Event name" name="eventName" />
+        <input type="text" class="form-control" placeholder="event type" name="eventType" />
+        <input type="text" class="form-control" placeholder="pet type" name="petType" />
+        <input type="text" class="form-control" placeholder="breed" name="breed" />
+        <input type="time" class="form-control" placeholder="time" name="time" />
+        <input type="text" class="form-control" placeholder="location" name="location" />
+        <input type="text" class="form-control" placeholder="attending?" name="attending" />
+        <input type="text" class="form-control" placeholder="description" name="description" />
+        </form>
+        <a role="button" class="btn" id="getDataBtn" href="results">Create new event</a>
+    </div>
 
     <!-- bottom nav -->
 	<div class="mynavbar">
