--- a/public/css/newEvent.css
+++ b/public/css/newEvent.css
@@ -220,3 +220,14 @@ body {
     width: 80%;
     height: auto;
 }
+
+.containerEvent{
+    margin-left: 7%;
+    margin-right: 7%;
+    margin-bottom: 80px;
+    text-align: center;
+}
+
+.form-control {
+    margin-bottom: 2%;
+}
