--- a/views/newEvent.handlebars
+++ b/views/newEvent.handlebars
@@ -31,17 +31,19 @@
    </div>
    <div class="containerEvent">
         <form id="json">
-        <input type="file" class="form-control" placeholder="image upload" name="image" />
-        <input type="text" class="form-control" placeholder="Event name" name="eventName" />
-        <input type="text" class="form-control" placeholder="event type" name="eventType" />
-        <input type="text" class="form-control" placeholder="pet type" name="petType" />
-        <input type="text" class="form-control" placeholder="breed" name="breed" />
-        <input type="time" class="form-control" placeholder="time" name="time" />
-        <input type="text" class="form-control" placeholder="location" name="location" />
-        <input type="text" class="form-control" placeholder="attending?" name="attending" />
-        <input type="text" class="form-control" placeholder="description" name="description" />
+        <label for="image"><b>Image</b></label>
+        <input type="file" class="form-control" placeholder="image upload" name="image">
+        <input type="text" class="form-control" placeholder="Event name" name="eventName" required>
+        <input type="text" class="form-control" placeholder="event type" name="eventType" required>
+        <input type="text" class="form-control" placeholder="pet type" name="petType">
+        <input type="text" class="form-control" placeholder="breed" name="breed">
+        <input type="time" class="form-control" placeholder="time" name="time" required>
+        <input type="text" class="form-control" placeholder="location" name="location" required> 
+        <!-- <input type="text" class="form-control" placeholder="attending?" name="attending" required> -->
+        <input type="text" class="form-control" placeholder="description" name="description" required>
+        <button type="submit">Create new event</button>
         </form>
-        <a role="button" class="btn" id="getDataBtn" href="results">Create new event</a>
+        <!-- <a role="button" class="btn" id="getDataBtn" href="results">Create new event</a> -->
     </div>
 
     <!-- bottom nav -->
