write new event to events.json

--- a/views/newEvent.handlebars
+++ b/views/newEvent.handlebars
@@ -30,7 +30,7 @@
         <p class="p8">Give event details</p>
    </div>
    <div class="containerEvent">
-        <form id="json">
+        <form id="json" method="get" action="/addEvent">
         <label for="image"><b>Image</b></label>
         <input type="file" class="form-control" placeholder="image upload" name="image">
         <input type="text" class="form-control" placeholder="Event name" name="eventName" required>
