--- a/public/css/login.css
+++ b/public/css/login.css
@@ -202,4 +202,9 @@ span.psw {
 
 #facebook {
     text-align: center;
+    margin-bottom: -80px;
+}
+#or {
+    margin-top: 5%;
+    text-align: center;
 }
