--- a/views/newEvent.handlebars
+++ b/views/newEvent.handlebars
@@ -41,8 +41,8 @@
         <input type="text" class="form-control" placeholder="location" name="location" required> 
         <!-- <input type="text" class="form-control" placeholder="attending?" name="attending" required> -->
         <input type="text" class="form-control" placeholder="description" name="description" required>
-        <button type="submit">Create new event</button>
         </form>
+        <button class="submitBtn" onclick="viewEvent()" type="submit">Create new event</button>
         <!-- <a role="button" class="btn" id="getDataBtn" href="results">Create new event</a> -->
     </div>
 
